# sql-chatbot

./: .gitignore  Makefile  README.md  pyproject.toml
db/: dataset01.db
src/sql_chatbot/: app.py  config.py  model.py  sql_chatbot.py  types_.py
src/sql_chatbot/modulos/: chatbot_api.py  chatbot_sql.py  model.py  router.py
templates/: index_api.html  index_sql.html
tests/: test_app.py  test_model.py  test_sql_chatbot.py
tests/test_modulos/: test_model.py  test_sql_chatbot.py
